[gd_scene load_steps=2 format=3 uid="uid://cjuitv3xymxfg"]

[ext_resource type="Script" path="res://equipment/nanite_armour.gd" id="1_770cd"]

[node name="nanite_armour" type="Node2D"]
script = ExtResource("1_770cd")

[node name="HealthRegenTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="HealthRegenTimer" to="." method="_on_health_regen_timer_timeout"]
